# kiteconnect-mocks

./: .gitignore  generate_session.json  mf_sips.json
JsonSchemaAndStructs/KiteConnect-Kotlin-Structs/: generate_session.kt  instruments_all.kt  instruments_nse.kt  mf_instruments.kt
JsonSchemaAndStructs/KiteConnect-Pike-Structs/: generate_session.pike  instruments_all.pike  instruments_nse.pike  mf_instruments.pike
JsonSchemaAndStructs/KiteConnect-Python-DataClass/: generate_session.py  instruments_all.py  instruments_nse.py  mf_instruments.py
JsonSchemaAndStructs/KiteConnect-Ruby-Structs/: generate_sessin.rb  instruments_all.rb  instruments_nse.rb  mf_instruments.rb
JsonSchemaAndStructs/KiteConnect-Rust-Structs/: generate_session.rs  instruments_all.rs  instruments_nse.rs  mf_instruments.rs
JsonSchemaAndStructs/KiteConnect-Typescript-Structs/: generate_session.ts  instruments_all.ts  instruments_nse.ts  mf_instruments.ts
rust_structs/: Cargo.toml  kite_ticker_extended_depth.json  kite_ticker_extended_depth_one.json  ltp.rs  orders.json  roughwork.txt
rust_structs/custom_mock_files/: a  kite websocket decode.js  roughwork.txt  ws.packet  ws492.packet  ws_extended_depth.packet  ws_extended_depth_20.packet  ws_message.txt  ws_three_thousand_extended_quote_message.packet  ws_three_thousand_quote_message.packet
rust_structs/custom_mock_files/kite.zerodha.com/: dashboard.html  worker.js
rust_structs/custom_mock_files/kite.zerodha.com/api/: banner.json  market-overview.json  marketwatch.json  preferences.json
rust_structs/custom_mock_files/kite.zerodha.com/oms/portfolio/: holdings.json  positions.json
rust_structs/custom_mock_files/kite.zerodha.com/oms/user/: margins.json
rust_structs/custom_mock_files/kite.zerodha.com/oms/user/profile/: full.json
rust_structs/custom_mock_files/kite.zerodha.com/static/css/: app.faf0599f.css  chartiq.f8030126.css  main-tradingview.2d680389.css  main.9ffc3366.css  outer.7abae0d6.css  tradingview.f8030126.css
rust_structs/custom_mock_files/kite.zerodha.com/static/js/: app.4a5b882e.js  chartiq.1ab52481.js  chartiqconnectmainmain-chartiqmain-tradingviewtradingview.917aed52.js  chartiqconnectmainmain-chartiqtradingview.ccf7a4f3.js  chartiqconnectmaintradingview.818bafa5.js  chartiqmainmain-chartiqoutertradingview.4d6aa12a.js  chunk-2d22c101.cb0b4346.js  chunk-vendors.ea6114a1.js  connect.c986c30a.js  holdings-auth.c1e84ece.js  main-chartiq.0487907e.js  main-tradingview.89fc5217.js  main.7d89fc0f.js  outer.5efb959a.js  tradingview.feec5532.js
rust_structs/custom_mock_files/kite.zerodha.com/static/sw/: sw.umd.js  sw.umd.min.js
rust_structs/src/: lib.rs  main.rs  schemas.rs  utils.rs
rust_structs/src/schemas/: abomonation_derive.rs  basket_margins.rs  checksum.rs  common.rs  convert_position.rs  generate_session.rs  gtt_delete_order.rs  gtt_get_order.rs  gtt_get_orders.rs  gtt_modify_order.rs  gtt_place_order.rs  historical_minute.rs  historical_oi.rs  holdings.rs  holdings_auth.rs  instruments.rs  instruments_nse.rs  kite_ticker.rs  logout.rs  ltp.rs  margin.rs  margin_commodity.rs  margins_equity.rs  mf_holdings.rs  mf_instruments.rs  mf_order_cancel.rs  mf_order_response.rs  mf_orders.rs  mf_orders_info.rs  mf_sip_cancel.rs  mf_sip_info.rs  mf_sip_modify.rs  mf_sip_place.rs  mf_sips.rs  ohlc.rs  order_cancel.rs  order_info.rs  order_margins.rs  order_modify.rs  order_response.rs  (+16 more)
