[package]
name = "rust_structs"
version = "0.1.0"
edition = "2021"
authors = ["Shabbir Hasan"]
repository = "https://github.com/ShabbirHasan1/kiteconnect-mocks/tree/rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
serde = { version = "1.0.137", features = [
    "derive",
    "alloc",
    "rc",
    "unstable",
] }
serde_json = { version = "1.0.81", features = [
    "raw_value",
    "alloc",
    # "arbitrary_precision",
    "float_roundtrip",
    "indexmap",
    "preserve_order",
    "unbounded_depth",
] }
serde_with = { version = "1.14.0", features = ["serde_json", "chrono", "json"] }
sha2 = "0.10"
