[package]
name = "rust_structs"
version = "0.1.0"
edition = "2021"
authors = ["Shabbir Hasan"]
repository = "https://github.com/ShabbirHasan1/kiteconnect-mocks/tree/rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_structs"
# proc-macro = true

[dependencies]
abomonation = "0.7.3"
alkahest = { version = "0.1.5", features = [
    "alkahest-proc",
    "derive",
    "nightly",
] }
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
rkyv = { version = "0.7.38", features = [
    "arbitrary_enum_discriminant",
    "archive_le",
    "bytecheck",
    "copy",
    "copy_unsafe",
    "indexmap",
    "rend",
    "smallvec",
    "strict",
    "tinyvec",
    "tinyvec_alloc",
    "uuid",
    "uuid_std",
    "validation",
] }
serde = { version = "1.0.137", features = [
    "derive",
    "alloc",
    "rc",
    "unstable",
] }
serde_json = { version = "1.0.81", features = [
    "raw_value",
    "alloc",
    # "arbitrary_precision",
    "float_roundtrip",
    "indexmap",
    "preserve_order",
    "unbounded_depth",
] }
serde_with = { version = "1.14.0", features = ["serde_json", "chrono", "json", "base64", "indexmap", "hex", "guide", "time_0_3"] }
sha2 = "0.10.2"
simd-json = { version = "0.5.0", features = [
    "128bit",
    # "allow-non-simd",
    "hints",
] }
speedy = { version = "0.8.2", features = [
    "chrono",
    "external_doc",
    "glam",
    "indexmap",
    "smallvec",
] }
proc-macro2 = "1.0.39"
quote = "1.0.18"
synstructure = "0.12.6"
bincode = { git = "https://github.com/bincode-org/bincode.git", branch = "trunk", version = "2.0.0-rc.1", features = [
    "serde",
] }
byteorder = "1.4.3"
eio = "0.1.2"
base64 = "*"
nom = { version = "7.1.1", features = ["docsrs"] }
